Live chat interface added.  A few final bugs to work out related to IE display (scrollbar issues).

--- a/app/webroot/css/style.css
+++ b/app/webroot/css/style.css
@@ -1,4 +1,4 @@
- 
+/* 
 ::-webkit-scrollbar {
     height:8px;
     width:12px; }
@@ -17,7 +17,7 @@
     background-color:#9f9f9f;
     height:50px; }
 
- 
+ */
 /**   {
  
 border:   2px black solid;
@@ -26,9 +26,9 @@ border:   2px black solid;
  
  
  */
-::-webkit-scrollbar-track-piece {
+/*::-webkit-scrollbar-track-piece {
     -webkit-border-radius:0;
-    background-color:#fff; }
+    background-color:#fff; }*/
  
  
 a { text-decoration: none; }
@@ -155,10 +155,10 @@ body {
     bottom: 0;
     margin-left: -250px;
     width: 500px; 
-    height: 500px;
-    margin-bottom: -522px;
+    height: 420px;
+    margin-bottom: -442px;
     overflow: auto; 
-    background-color: #eee;
+    background-color: #f8f8f8;
     padding: 10px;
     font-size: 15px; 
     z-index: 10000;
@@ -166,6 +166,22 @@ body {
     border-top-right-radius: 10px;
     border: 2px solid #333; }
 
+
+#input {
+    position: fixed;
+    left: 50%;
+    bottom: 0;
+    margin-left: -250px;
+    width: 500px; 
+    height: 50px;
+    margin-bottom: -512px;
+    border-radius: 0px;
+    overflow: auto; 
+    padding: 10px;
+    font-size: 15px; 
+    z-index: 10000;
+    background-color: #f8f8f8;
+    border: 2px solid #333; }
 
 #footer-tab {
     width: 100px; 
